--- a/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
+++ b/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Photos Collection View Controller-->
+        <!--Photo Collection Collection View Controller-->
         <scene sceneID="eko-G4-gMY">
             <objects>
-                <collectionViewController id="BDg-rj-6s1" customClass="PhotosCollectionViewController" sceneMemberID="viewController">
+                <collectionViewController id="BDg-rj-6s1" customClass="PhotoCollectionCollectionViewController" customModule="OBJCAstronomyProject" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="MIc-mf-l09">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -51,7 +51,7 @@
         <!--Photo Detail View Controller-->
         <scene sceneID="hx7-MK-7za">
             <objects>
-                <viewController id="jyZ-6m-pV9" customClass="PhotoDetailViewController" sceneMemberID="viewController">
+                <viewController id="jyZ-6m-pV9" customClass="PhotoDetailViewController" customModule="OBJCAstronomyProject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HAW-hB-sxz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
