--- a/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
+++ b/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -25,11 +26,26 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="Oeh-iE-LvI">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jg7-tx-xHM">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="MqJ-ic-Pfw">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="150" id="7Iv-Gh-fq1"/>
+                                                <constraint firstAttribute="width" constant="150" id="Z2X-AX-mcu"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="MqJ-ic-Pfw" secondAttribute="trailing" id="96s-FA-KQ4"/>
+                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="leading" secondItem="Jg7-tx-xHM" secondAttribute="leading" id="K2t-nv-jLf"/>
+                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="top" secondItem="Jg7-tx-xHM" secondAttribute="top" id="U37-sB-l3I"/>
+                                        <constraint firstAttribute="bottom" secondItem="MqJ-ic-Pfw" secondAttribute="bottom" id="a08-KM-w0a"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                 <connections>
@@ -55,14 +71,62 @@
                     <view key="view" contentMode="scaleToFill" id="HAW-hB-sxz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="uN2-qP-GXV">
+                                <rect key="frame" x="0.0" y="144" width="414" height="380"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="380" id="IU1-Tn-SIQ"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="a22-MJ-Hr0">
+                                <rect key="frame" x="20" y="558" width="305.5" height="85"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken by &lt;Rover&gt; on &lt;date&gt; (Sol &lt;sol&gt;)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zt0-2X-MTT">
+                                        <rect key="frame" x="0.0" y="0.0" width="305.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="nZ7-VS-1Ar">
+                                        <rect key="frame" x="0.0" y="27.5" width="113.5" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cwk-XI-ZxD">
+                                                <rect key="frame" x="0.0" y="0.0" width="64" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nt3-NL-d34">
+                                                <rect key="frame" x="72" y="0.0" width="41.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DH1-33-zEK">
+                                        <rect key="frame" x="0.0" y="55" width="147" height="30"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="PhotoDetailViewController.SaveButton"/>
+                                        <state key="normal" title="Save to Photo Library"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="2vi-kR-zg3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="a22-MJ-Hr0" firstAttribute="top" secondItem="uN2-qP-GXV" secondAttribute="bottom" constant="34" id="H9m-Uo-lwB"/>
+                            <constraint firstItem="uN2-qP-GXV" firstAttribute="centerX" secondItem="HAW-hB-sxz" secondAttribute="centerX" id="Imb-Vj-XWq"/>
+                            <constraint firstItem="a22-MJ-Hr0" firstAttribute="leading" secondItem="HAW-hB-sxz" secondAttribute="leadingMargin" id="fsO-7E-zWe"/>
+                            <constraint firstItem="uN2-qP-GXV" firstAttribute="leading" secondItem="2vi-kR-zg3" secondAttribute="leading" id="hQ4-wb-avb"/>
+                            <constraint firstItem="uN2-qP-GXV" firstAttribute="top" secondItem="2vi-kR-zg3" secondAttribute="top" constant="56" id="oCO-pY-Yer"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3dI-rz-xcT"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XV2-1l-bZx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1183" y="124"/>
+            <point key="canvasLocation" x="1182.608695652174" y="123.88392857142857"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Nhv-ah-KXh">
@@ -84,6 +148,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="MarsPlaceholder" width="225" height="225"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
