--- a/Astronomy/Astronomy/Base.lproj/Main.storyboard
+++ b/Astronomy/Astronomy/Base.lproj/Main.storyboard
@@ -1,8 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5j2-mz-8hB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Sol-->
+        <scene sceneID="hlS-PD-dyy">
+            <objects>
+                <viewController id="Uqn-Sr-Fej" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UZo-8d-J9g">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jxK-I0-BWl">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="O37-pA-wrJ">
+                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="VoQ-qR-b6A">
+                                        <rect key="frame" x="10" y="10" width="150" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="XIP-GU-2ef">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="da8-iq-Ydc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="da8-iq-Ydc" secondAttribute="trailing" id="05a-ko-avu"/>
+                                                <constraint firstItem="da8-iq-Ydc" firstAttribute="leading" secondItem="XIP-GU-2ef" secondAttribute="leading" id="DJC-eM-uLz"/>
+                                                <constraint firstAttribute="bottom" secondItem="da8-iq-Ydc" secondAttribute="bottom" id="jKV-Qj-0vG"/>
+                                                <constraint firstItem="da8-iq-Ydc" firstAttribute="top" secondItem="XIP-GU-2ef" secondAttribute="top" id="mSo-zf-1pb"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <segue destination="Mg1-fg-ZmS" kind="show" identifier="showDetailSegue" id="j3G-K4-77k"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Fwf-Qr-cvk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jxK-I0-BWl" firstAttribute="leading" secondItem="Fwf-Qr-cvk" secondAttribute="leading" id="UBO-UM-0mT"/>
+                            <constraint firstItem="jxK-I0-BWl" firstAttribute="top" secondItem="Fwf-Qr-cvk" secondAttribute="top" id="pVi-Cn-8rR"/>
+                            <constraint firstItem="Fwf-Qr-cvk" firstAttribute="trailing" secondItem="jxK-I0-BWl" secondAttribute="trailing" id="reZ-CR-7fm"/>
+                            <constraint firstItem="Fwf-Qr-cvk" firstAttribute="bottom" secondItem="jxK-I0-BWl" secondAttribute="bottom" id="uBv-sG-OPe"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Sol" id="h26-C9-RJK">
+                        <barButtonItem key="leftBarButtonItem" systemItem="rewind" id="7Uz-GU-W0F"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="fastForward" id="dsT-Zd-vzY"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rD5-mm-bgQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="533.33333333333337" y="212.94642857142856"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="vii-xO-N6s">
+            <objects>
+                <viewController id="Mg1-fg-ZmS" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0M0-Pf-tPC">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6cA-A9-rWe">
+                                <rect key="frame" x="57" y="138" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="hbd-8P-QAt"/>
+                                    <constraint firstAttribute="width" constant="300" id="yKo-Pz-L4c"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken by &lt;Rover&gt; on &lt;date&gt; (Sol &lt;sol&gt;)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YWT-17-T9X">
+                                <rect key="frame" x="50" y="488" width="306" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ExU-BL-wQC">
+                                <rect key="frame" x="50" y="539" width="64" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zOe-Nt-hVH">
+                                <rect key="frame" x="133.5" y="589" width="147" height="30"/>
+                                <state key="normal" title="Save to Photo Library"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="be6-mo-bMR"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="YWT-17-T9X" firstAttribute="leading" secondItem="be6-mo-bMR" secondAttribute="leading" constant="50" id="2Qf-e3-bgF"/>
+                            <constraint firstItem="6cA-A9-rWe" firstAttribute="top" secondItem="be6-mo-bMR" secondAttribute="top" constant="50" id="8ul-34-5ao"/>
+                            <constraint firstItem="zOe-Nt-hVH" firstAttribute="centerX" secondItem="0M0-Pf-tPC" secondAttribute="centerX" id="OmX-ar-8R7"/>
+                            <constraint firstItem="YWT-17-T9X" firstAttribute="top" secondItem="6cA-A9-rWe" secondAttribute="bottom" constant="50" id="W5H-5j-N0d"/>
+                            <constraint firstItem="ExU-BL-wQC" firstAttribute="top" secondItem="YWT-17-T9X" secondAttribute="bottom" constant="30" id="X5J-Zw-WSO"/>
+                            <constraint firstItem="ExU-BL-wQC" firstAttribute="leading" secondItem="be6-mo-bMR" secondAttribute="leading" constant="50" id="gWm-RF-AA2"/>
+                            <constraint firstItem="zOe-Nt-hVH" firstAttribute="top" secondItem="YWT-17-T9X" secondAttribute="bottom" constant="80" id="oBY-Zc-Q19"/>
+                            <constraint firstItem="6cA-A9-rWe" firstAttribute="centerX" secondItem="0M0-Pf-tPC" secondAttribute="centerX" id="xzw-TD-Ijc"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="Hr3-14-JQu"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TXo-Lf-Qjx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1399" y="213"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Pdq-wt-gJN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5j2-mz-8hB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OAt-4b-qg0">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Uqn-Sr-Fej" kind="relationship" relationship="rootViewController" id="7mf-hc-KJH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G3p-C1-Ood" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-376.81159420289856" y="212.94642857142856"/>
+        </scene>
+    </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
