--- a/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
+++ b/OBJCAstronomyProject/OBJCAstronomyProject/Base.lproj/Main.storyboard
@@ -19,36 +19,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TEw-ec-RvC">
-                            <size key="itemSize" width="128" height="128"/>
+                            <size key="itemSize" width="197" height="197"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="Oeh-iE-LvI">
-                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="Oeh-iE-LvI" customClass="CollectionViewCell" customModule="OBJCAstronomyProject" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="197" height="197"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jg7-tx-xHM">
-                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="197" height="197"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="MqJ-ic-Pfw">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="150" id="7Iv-Gh-fq1"/>
-                                                <constraint firstAttribute="width" constant="150" id="Z2X-AX-mcu"/>
-                                            </constraints>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MqJ-ic-Pfw">
+                                            <rect key="frame" x="0.0" y="0.0" width="197" height="197"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="MqJ-ic-Pfw" secondAttribute="trailing" id="96s-FA-KQ4"/>
-                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="leading" secondItem="Jg7-tx-xHM" secondAttribute="leading" id="K2t-nv-jLf"/>
-                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="top" secondItem="Jg7-tx-xHM" secondAttribute="top" id="U37-sB-l3I"/>
-                                        <constraint firstAttribute="bottom" secondItem="MqJ-ic-Pfw" secondAttribute="bottom" id="a08-KM-w0a"/>
+                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="top" secondItem="Jg7-tx-xHM" secondAttribute="top" id="5ms-GJ-LzU"/>
+                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="leading" secondItem="Jg7-tx-xHM" secondAttribute="leading" id="Uok-Bt-m3x"/>
+                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="centerY" secondItem="Jg7-tx-xHM" secondAttribute="centerY" id="Xv6-Qq-mgU"/>
+                                        <constraint firstItem="MqJ-ic-Pfw" firstAttribute="centerX" secondItem="Jg7-tx-xHM" secondAttribute="centerX" id="nT9-hV-7q3"/>
                                     </constraints>
                                 </collectionViewCellContentView>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <size key="customSize" width="197" height="197"/>
                                 <connections>
+                                    <outlet property="photoCollectionViewCell" destination="MqJ-ic-Pfw" id="yzU-dv-c5F"/>
                                     <segue destination="jyZ-6m-pV9" kind="show" id="N2u-0F-lcN"/>
                                 </connections>
                             </collectionViewCell>
